# forward-as-attachment-mta

./: Cargo.toml  README.md  cron-long-output.eml
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
